add link on SimplePage

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="row">
 			<div class="col-xc-12 col-md-4">
 			<div class="grid-unit">
-			<a href="https://github.com/Romchik22/SimplePage">
+			<a href="https://romchik22.github.io/SimplePage/">
 				<figure>
 					<img src="images/Screenshot.jpg" alt="Simple Page">
 					<figcaption>
